--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,5 +8,6 @@ mode = "smart"
 
 [[d1_databases]]
 binding = "DATABASE"
-database_name = "cloudflare-saas-stack-db"
-database_id = "294b2613-5f3c-40e5-b32b-bbe664bd9696"
+database_name = "cloudflare-stack-test"
+database_id = "9b9c1088-cc08-4e5e-8c29-b493c0725eee"
+migrations_dir = "./drizzle"
